<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/volumeButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:padding="24dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/volume"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/volume" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/faw"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/_0"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context="com.em.findaword.ui.GameFragment">

            <TextView
                android:id="@+id/instructionsString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="FIND A WORD CONTAINING:"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/subString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/blank"
                android:textStyle="bold"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/wordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                android:height="54dp"
                android:hint="@string/type_a_word"
                android:textAlignment="center"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/checkButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10sp"
                android:backgroundTint="@color/acua"
                android:text="@string/check" />

            <Button
                android:id="@+id/giveUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:backgroundTint="@color/red"
                android:text="@string/give_up" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/giveUpConfirmation"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_gray_95"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:text="@string/are_you_sure_you_want_to_give_up"
                android:textAlignment="center"
                android:paddingHorizontal="60dp" />

            <Button
                android:id="@+id/yesButton"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/success_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:padding="0dp"
                android:text="@string/yes" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/danger_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:padding="0dp"
                android:text="@string/no" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gameOverPanel"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_gray_95"
            android:gravity="center_horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="42sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:textColor="@color/light_red"
                android:text="@string/game_over"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="@string/possible_answer"/>

            <TextView
                android:id="@+id/correctAnswerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:text="@string/answer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:text="@string/your_score"/>

            <TextView
                android:id="@+id/finalScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/newMaxScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:textColor="@color/gold"
                android:text="@string/new_high_score" />

            <Button
                android:id="@+id/replayButton"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/success_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:padding="0dp"
                android:text="@string/replay" />

            <Button
                android:id="@+id/mainMenuButton"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/danger_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:padding="0dp"
                android:text="@string/main_menu" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>